# geovigil-analytics

./: .gitignore  render.yaml  wrangler.jsonc
doc/: ARCHITECTURE.md  CONCEPT_NOTE.es.md  CONCEPT_NOTE.md  HANDOFF.md
py/: app.py  daily_run.py  pyproject.toml
py/pipeline/: ensemble.py  fetch_planet.py  fetch_sentinel.py  git_push.py  run_inference.py  update_json.py  upload_candidates.py
review/: README.md  reset_demo.sh  schema.sql  wrangler.toml
review/functions/_lib/: auth.js
review/functions/api/: login.js  next.js  results.js  review.js
review/functions/image/: [[key]].js
review/public/: index.html  results.html
web/: index.html
web/data/: detections.json
